Feature/fixes (#39)
* standardize on one uuid API
* address todo's
* only use 1 parameter in body
* Fix ssl key
* Validate area in all covering calls
* Add get isa; more small fixes
